my_yaml/AWS_Elastic_Block_Store.yaml
apiVersion: v1
kind: Pod
metadata:
  name: using_ebs
spec:
  containers:
    - name: using-ebs
      image: busybox
      volumeMounts:
        - mountPath: /test-ebs
          name: ebs-volume
  volumes:
    - name: ebs-volume
      # This AWS EBS volume must already exist.
      awsElasticBlockStore:
        volumeID: <volume-id>
        fsType: ext4
