my_yaml/ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: sa-frontend-lb
          servicePort: 30001
      - path: /bar
        backend:
          serviceName: service2
          servicePort: 8080
