my_yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress-1
spec:
  backend:
    serviceName: testsvc
    servicePort: 80
